# tix

./: .gitignore  CLAUDE.md  DESIGN.json  DESIGN.md  PRODUCT.md  README.md  install-tix  install-tix-admin  install-tix-ui  install-tix-vault  install.sh  setup-deps  ticket  tix  tix-vault  uninstall-tix
docs/: release-pipeline.md
lib/: display_ops.sh  yaml_ops.sh
npm/: README.md  install.js  package.json
scripts/: screenshots.py
test/: add_ac.bats  basic_operations.bats  test_helper.bash  tix_rename.bats
tix-admin/: README.md  index.html  package-lock.json  package.json  vite.config.ts
tix-server/: Makefile  README.md  cmd_create.go  cmd_dep.go  cmd_lifecycle.go  cmd_ls.go  cmd_notes.go  cmd_query.go  cmd_root.go  cmd_ui.go  cmd_util.go  db.go  disk.go  disk_test.go  e2e_test.go  go.mod  go.sum  main.go  notes_test.go  sanitize.go  sanitize_test.go  server.go  sync.go  sync_test.go  testhelper_test.go  watch.go  ws.go
tix-ui/: .cta.json  .gitignore  DESIGN.md  README.md  bun.lockb  components.json  index.go.html  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.go-mode.ts  vite.config.ts
tix-ui-deno/: deno.json  serve.ts
tix-ui-go/: .gitignore  go.mod  main.go  server.go  tickets.go
tix-ui-hono/: bun.lockb  package.json  serve.ts
tix-ui-react/: README.md  index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
tix-ui-rust/: Cargo.toml
tix-ui-rust/src/: main.rs  server.rs  tickets.rs
tix-ui-rust/src/templates/: index.html
tix-ui-start/: bun.lockb  package.json  vite.config.ts
(+203 files in other folders)
