[package]
name = "tix-ui"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
notify = "7"
tower-http = { version = "0.6", features = ["cors"] }
clap = { version = "4", features = ["derive"] }
open = "5"
futures = "0.3"
